[metadata]
name = mailguard
version = 0.1.0
description = An app to guard mailbox from spam, phishing mails and more
long_description = file: README.md
url = https://www.mailguard.io/
author = Martin Weygandt
author_email = martin.weygandt@cloudified-identity.de
license = BSL-1.1
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Software Development

[options]
include_package_data = true
packages = find:src
python_requires = >=3.8
setup_requires =
    setuptools >= 57.0.0
install_requires =
    Django >= 3.2